added JavaDoc comments to all files in exception and ErrorResponseDTO